--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
 
   "main": "index.js",
 
-  "start": "node App.js",
-
   "scripts": {
 
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+
+    "start": "node App.js"
 
   },
 
